force-app/main/default/objects/Adocao__c/Adocao__c.object-meta.xml
<CustomObject>
    <label>Adoção</label>
    <nameField>
        <displayFormat>Adoção {0000}</displayFormat>
        <label>Adoção Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoções</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>