force-app/main/default/objects/Adocao__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dono</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adoções</relationshipLabel>
    <relationshipName>Adocao</relationshipName>
    <type>Lookup</type>
</CustomField>