force-app/main/default/objects/Adocao__c/fields/DataAdocao__c.field-meta.xml
<CustomField>
    <fullName>DataAdocao__c</fullName>
    <label>Data da Adoção</label>
    <type>Date</type>
</CustomField>