force-app/main/default/objects/Adocao__c/validationRules/DataNaoPodeSerMenorQueHoje.validationRule-meta.xml
<ValidationRule>
    <fullName>DataNaoPodeSerMenorQueHoje</fullName>
    <active>true</active>
    <description>Data Nao Pode Ser Menor Que Hoje</description>
    <errorConditionFormula>DataAdocao__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Data não pode ser menor do que hoje</errorMessage>
</ValidationRule>