force-app/main/default/objects/Adocao__c/validationRules/NaoPodeAdocaoAlemDoMesAtual.validationRule-meta.xml
<ValidationRule>
    <fullName>NaoPodeAdocaoAlemDoMesAtual</fullName>
    <active>true</active>
    <errorConditionFormula>MONTH(DataAdocao__c) &gt; MONTH(TODAY())</errorConditionFormula>
    <errorMessage>Não é possível colocar Data além do Mês atual!</errorMessage>
</ValidationRule>